python/src/gateway/manifests/service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  type: ClusterIP
  ports:
  - port: 5001
    targetPort: 5001
    protocol: TCP
